# PalmDetection-Yolov5n-Android

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5n.ncnn.param
app/src/main/cpp/: CMakeLists.txt  palmdetection.cpp
app/src/main/cpp/ncnn-20220420-android-vulkan/arm64-v8a/include/glslang/MachineIndependent/: localintermediate.h
app/src/main/cpp/ncnn-20220420-android-vulkan/arm64-v8a/include/glslang/Public/: ShaderLang.h
app/src/main/cpp/ncnn-20220420-android-vulkan/arm64-v8a/include/ncnn/: cpu.h  mat.h  platform.h
app/src/main/cpp/ncnn-20220420-android-vulkan/arm64-v8a/lib/cmake/: SPIRVTargets-release.cmake  glslangTargets-release.cmake
app/src/main/cpp/ncnn-20220420-android-vulkan/armeabi-v7a/include/ncnn/: allocator.h  c_api.h  layer.h
app/src/main/cpp/ncnn-20220420-android-vulkan/armeabi-v7a/lib/cmake/: OGLCompilerTargets.cmake
app/src/main/cpp/ncnn-20220420-android-vulkan/x86/include/glslang/Include/: intermediate.h
app/src/main/cpp/ncnn-20220420-android-vulkan/x86/include/glslang/MachineIndependent/: ParseHelper.h
app/src/main/cpp/ncnn-20220420-android-vulkan/x86/include/ncnn/: layer_type_enum.h  option.h
app/src/main/cpp/ncnn-20220420-android-vulkan/x86/lib/cmake/: OSDependentTargets-release.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake
app/src/main/cpp/ncnn-20220420-android-vulkan/x86/lib/cmake/ncnn/: ncnn.cmake
app/src/main/cpp/ncnn-20220420-android-vulkan/x86_64/include/glslang/MachineIndependent/: SymbolTable.h  iomapper.h
app/src/main/cpp/ncnn-20220420-android-vulkan/x86_64/include/ncnn/: layer_shader_type_enum.h  platform.h
app/src/main/cpp/ncnn-20220420-android-vulkan/x86_64/lib/cmake/: OGLCompilerTargets-release.cmake  glslangTargets.cmake
app/src/main/cpp/ncnn-20220420-android-vulkan/x86_64/lib/cmake/ncnn/: ncnn-release.cmake
app/src/main/res/layout/: activity_main.xml  camera_layout.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
